Added welcome new members.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <body>
         <h1>Welcome to Troop 5592!</h1>
         <p>We're a girls' scout troop in Portland, Oregon.</p>
+        <p>We welcome new members!</p>
         <a href="http://troop592.net">The boys division.</a>
     </body>
 </HTML>
