Updated link and uploading photo.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <h1>Welcome to Troop 5592!</h1>
         <p>
         <p>Troop 5592 is a Scout-led troop. We're a girls unit scout troop in the Raleigh Hills area, Oregon, founded xxxx. Scouts in our Troop come from a large geographic area.  
-            We are linked with a boys group (592) <a href="http://troop592.net"> The boys division.</a> This gives us the advantages that come with a well established group and the
+            We are linked with a <a href="http://troop592.net">boys group (592)</a> This gives us the advantages that come with a well established group and the
             diverse leaders that sever both units. We are adventuresome and have fun. Troop 5592 has gone on many scouting adventures such as Webelos woods, Meriwether scout camp, 
            Sledding adventures at Mt.hood, summer camp at Fire Mouintian and many more.  </p>
         <p>We welcome new members!</p>
