Added photo to index.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <body>
         <h1>Welcome to Troop 5592!</h1>
         <p>
+            <img width=auto height=300px src="20210715_192731.jpg"/>
+        </p>
         <p>Troop 5592 is a Scout-led troop. We're a girls unit scout troop in the Raleigh Hills area, Oregon, founded xxxx. Scouts in our Troop come from a large geographic area.  
             We are linked with a <a href="http://troop592.net">boys group (592)</a> This gives us the advantages that come with a well established group and the
             diverse leaders that sever both units. We are adventuresome and have fun. Troop 5592 has gone on many scouting adventures such as Webelos woods, Meriwether scout camp, 
